# Sophi-Shoes-App

./: .env  .env.example  index.html  modified_files.txt  package-lock.json  package.json  tailwind.config.js  tauri_build_error.txt  tauri_build_error_utf8.txt  tauri_build_log.txt  ts_errors.txt  ts_errors_plain.txt  tsc_output.txt  tsc_output_utf8.txt  tsconfig.tsbuildinfo  vite.config.ts
Versiones/: Sophi_Shoes_V0.1.0_Feb_10.msi
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ConnectivityTester.tsx
src/components/cash/: CashOpenModal.tsx  ExpenseModal.tsx
src/components/layout/: MainLayout.tsx
src/components/purchases/: PurchasePaymentModal.tsx
src/components/sales/: CustomerSelect.tsx  ReturnModal.tsx
src/components/suppliers/: SupplierDebtsModal.tsx  SupplierPaymentModal.tsx
src/components/ui/: ImageUpload.tsx  LoadingScreen.tsx
src/contexts/: AuthContext.tsx  AuthContext.tsx.bak
src/lib/: mockSupabase.ts  storage.ts  supabase.ts
src/pages/: DashboardPage.tsx
src/pages/auth/: LoginPage.tsx
src/pages/cash/: DailyCashPage.tsx
src/pages/customers/: CustomerFormPage.tsx  CustomersPage.tsx
src/pages/products/: ProductFormPage.tsx  ProductsPage.tsx
src/pages/purchases/: PurchaseFormPage.tsx  PurchasesPage.tsx
src/types/: database.ts
src/utils/: exportUtils.ts  variantUtils.ts
supabase/: schema.sql
supabase/migrations/: 20240601_add_client_type.sql  20240601_update_customers.sql  20260210_add_purchase_credits.sql  20260211_fix_ledger_schema.sql
(+9 files in other folders)
